# SSUBB

./: .dockerignore  .gitignore  README.md  config.example.yaml  config.minimal.yaml  docker-compose.yml  pyproject.toml  run_e2e_test.py  start_coordinator.bat  start_coordinator.sh
.claude/: settings.local.json
coordinator/: Dockerfile  __init__.py  audio_extractor.py  config.py  discovery.py  main.py  notifier.py  requirements.txt  scanner.py  scheduler.py  setup_wizard.py  subtitle_checker.py  subtitle_writer.py  task_manager.py  task_store.py  worker_client.py  worker_registry.py
docs/: README.md  architecture.md  code_review_v0.12.md  configuration.md  inspirations.md  roadmap.md  v1.0-plan.md
launcher/: __init__.py  __main__.py  app.py  config_ui.py  env_check_panel.py  log_viewer.py  oobe.py  service.py  theme.py  tray.py  updater.py
scripts/: benchmark_llm.py  benchmark_whisper.py  build_coordinator.py  build_launcher.py  build_worker.py  check_env.ps1  preview.py  terminal.py  test_upgrade.py  validate.py
shared/: __init__.py  constants.py  models.py
tests/: conftest.py  smoke_test.py  test_config.py  test_constants.py  test_coordinator_api.py  test_models.py  test_preview.py  test_task_store.py  test_webui_contract.py  test_worker_components.py
worker/: __init__.py  annotator.py  config.py  discovery_client.py  env_check.py  health.py  llm_client.py  main.py  model_manager.py  optimizer.py  requirements.txt  run_worker.bat  run_worker.sh  setup_wizard.py  srt_parser.py  task_executor.py  terminology_extractor.py  translator.py  whisper_runner.py
(+5 files in other folders)
