[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ssubb"
version = "1.0.0"
description = "SSUBB - 分布式字幕转写翻译系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
worker = [
    "stable-ts>=2.16.0",
    "faster-whisper>=1.1.0",
    "torch>=2.0.0",
    "openai>=1.50.0",
    "python-multipart>=0.0.9",
]
build = [
    "nuitka",
    "ordered-set",
    "pyinstaller",
]
launcher = [
    "PySide6>=6.6.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "coordinator*", "worker*", "launcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
